refactor: 更新QfeBpmnModel中的startEvents获取逻辑，使用getFirst方法替代get以提升代码可读性